tests/typecheck/fail/generic_method_mismatch.tw
// Error: generic inherent method return type must unify with annotation.
// `Box<String>.get()` returns String, not Int.

type Box<T> = .{ value: T }
fn get<T>(b: Box<T>) T { b.value }

b := Box.{ value: "hello" }
x: Int = b.get()   // should fail: String != Int
